accounts due date and confirmation statement due dates updating based on status